# MySDLDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/org/libsdl/app/: SDLActivity.java
app/src/main/res/layout/: activity_sdl.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
